MAV School Project Day images
Updated to include MAV School Project Day images and twitter feed link

--- a/gallery4.html
+++ b/gallery4.html
@@ -93,74 +93,31 @@
 
     <section id="portfolio">
         <div class="container">
-		    <div class="row">
-                <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 portfolio-item">
-                    <div class="portfolio-one">
-                        <div class="portfolio-head">
-                            <div class="portfolio-img"><img alt="" src="img/gallery/gallery10.jpg"></div>
-                        </div>
-                        <!-- End portfolio-head -->
-                        <div class="portfolio-content">
-                            <h5 class="title">Empennage Explained</h5>
-                            <p>Explaining about the empennage using a picture board</p>
-                        </div>
-                        <!-- End portfolio-content -->
-                    </div>
-                    <!-- End portfolio-item -->
-                </div>
-                <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 portfolio-item">
-                    <div class="portfolio-one">
-                        <div class="portfolio-head">
-                            <div class="portfolio-img"><img alt="" src="img/gallery/gallery11.jpg"></div>
-                        </div>
-                        <!-- End portfolio-head -->
-                        <div class="portfolio-content">
-                            <h5 class="title">Demo Board</h5>
-                            <p>A demo board with RC electronic components in action</p>
-                        </div>
-                        <!-- End portfolio-content -->
-                    </div>
-                    <!-- End portfolio-item -->
-                </div>
-                <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 portfolio-item">
-                    <div class="portfolio-one">
-                        <div class="portfolio-head">
-                            <div class="portfolio-img"><img alt="" src="img/gallery/gallery6.jpg"></div>
-                        </div>
-                        <!-- End portfolio-head -->
-                        <div class="portfolio-content">
-                            <h5 class="title">Flying a Quadcopter</h5>
-                            <p>Parent's eagerly watching a quadcopter being flown.</p>
-                        </div>
-                        <!-- End portfolio-content -->
-                    </div>
-                    <!-- End portfolio-item -->
-                </div>
-            </div>
+
             <div class="row">
                 <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 portfolio-item">
                     <div class="portfolio-one">
                         <div class="portfolio-head">
-                            <div class="portfolio-img"><img alt="" src="img/gallery/gallery4.jpg"></div>
+                            <div class="portfolio-img"><img alt="" src="img/gallery/gallery16.jpg"></div>
                         </div>
                         <!-- End portfolio-head -->
                         <div class="portfolio-content">
-                            <h5 class="title">School Project Day</h5>
-                            <p>Demonstrating the thrust produced by a brushless motor prop</p>
+                            <h5 class="title">SAAF Test Pilot</h5>
+                            <p>SAAF Test Pilot took time to explain his experience flying Gripen Fighter Jet</p>
                         </div>
                         <!-- End portfolio-content -->
                     </div>
                     <!-- End portfolio-item -->
                 </div>
-				               <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 portfolio-item">
+                <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 portfolio-item">
                     <div class="portfolio-one">
                         <div class="portfolio-head">
-                            <div class="portfolio-img"><img alt="" src="img/gallery/gallery8.jpg"></div>
+                            <div class="portfolio-img"><img alt="" src="img/gallery/gallery15.jpg"></div>
                         </div>
                         <!-- End portfolio-head -->
                         <div class="portfolio-content">
-                            <h5 class="title">RC Airplane Electronics</h5>
-                            <p>Demonstrating the various electronic components used in a RC Airplane</p>
+                            <h5 class="title">SAAB Gripen Simulator</h5>
+                            <p>Fliteyoke's Nandan given an opportunity to try the Gripen Simulator @ Aero India, Bangalore</p>
                         </div>
                         <!-- End portfolio-content -->
                     </div>
@@ -169,33 +126,32 @@
 				<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 portfolio-item">
                     <div class="portfolio-one">
                         <div class="portfolio-head">
-                            <div class="portfolio-img"><img alt="" src="img/gallery/gallery17.jpg"></div>
+                            <div class="portfolio-img"><img alt="" src="img/gallery/gallery18.jpg"></div>
                         </div>
                         <!-- End portfolio-head -->
                         <div class="portfolio-content">
-                            <h5 class="title">Visiting Aero India</h5>
-                            <p>We regularly visit Aero India Air Show held in Bangalore</p>
+                            <h5 class="title">Fighter Jet Cockpit</h5>
+                            <p>Fliteyoke's Nandan happy to be seated in the Fighter Jet Cockpit @ Aero India, Bangalore</p>
                         </div>
                         <!-- End portfolio-content -->
                     </div>
                     <!-- End portfolio-item -->
                 </div>
             </div>
- 
 
             <div class="row">
                 <div class="col-md-12 col-sm-12 col-xs-12">
                     <nav aria-label="Page navigation example">
                         <ul class="pagination pagination-lg justify-content-end">
                             <li class="page-item">
-                                <a class="page-link" href="gallery2.html" tabindex="-1">Previous</a>
+                                <a class="page-link" href="gallery3.html" tabindex="-1">Previous</a>
                             </li>
                             <li class="page-item"><a class="page-link" href="gallery.html">1</a></li>
                             <li class="page-item"><a class="page-link" href="gallery2.html">2</a></li>
 							<li class="page-item"><a class="page-link" href="gallery3.html">3</a></li>
 							<li class="page-item"><a class="page-link" href="gallery4.html">4</a></li>
-                            <li class="page-item">
-                                <a class="page-link" href="gallery4.html">Next</a>
+                            <li class="page-item disabled">
+                                <a class="page-link" href="#">Next</a>
                             </li>
                         </ul>
                     </nav>
